[gd_scene load_steps=9 format=2]

[ext_resource path="res://target.png" type="Texture" id=1]
[ext_resource path="res://body.png" type="Texture" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]

[sub_resource type="TileSet" id=1]
0/name = "body.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 40, 40 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 40, 40 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0
1/name = "target.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 40, 40 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [  ]
1/z_index = 0

[sub_resource type="DynamicFontData" id=2]
font_path = "res://assets/ShareTechMono-Regular.ttf"

[sub_resource type="DynamicFont" id=3]
size = 32
use_mipmaps = true
font_data = SubResource( 2 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://assets/ShareTechMono-Regular.ttf"

[sub_resource type="DynamicFont" id=5]
size = 120
outline_size = 3
font_data = SubResource( 4 )

[node name="Game" type="Node2D"]
script = ExtResource( 3 )

[node name="Grid" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 40, 40 )
format = 1

[node name="StepTimer" type="Timer" parent="."]
wait_time = 0.346

[node name="Score" type="Label" parent="."]
margin_left = 570.933
margin_top = 15.416
margin_right = 791.933
margin_bottom = 52.416
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "YOUR SCORE: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverLabel" type="Label" parent="."]
visible = false
margin_left = -1.16797
margin_top = 184.135
margin_right = 917.832
margin_bottom = 472.135
custom_fonts/font = SubResource( 5 )
text = "GAME OVER
123"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AllowMovementTimer" type="Timer" parent="."]
wait_time = 0.158
one_shot = true
[connection signal="timeout" from="StepTimer" to="." method="step"]
[connection signal="timeout" from="NewGameTimer" to="." method="_enable_newgame"]
[connection signal="timeout" from="AllowMovementTimer" to="." method="allowMovement"]
